--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -27,5 +27,6 @@
     }
   ],
   "window.zoomLevel": 0,
-  "extensions.ignoreRecommendations": false
+  "extensions.ignoreRecommendations": false,
+  "typescript.check.tscVersion": false
 }
